baml_language/crates/baml_tests/snapshots/namespaces_stream_direct_ref/baml_tests__namespaces_stream_direct_ref__01_lexer__main.snap
---
source: crates/baml_tests/src/generated_tests.rs
---
Slash "/"
Slash "/"
Word "Test"
Colon ":"
Word "direct"
Word "references"
Word "to"
Word "$stream"
Word "companion"
Word "types"
In "in"
Word "user"
Word "code"
Dot "."
Slash "/"
Slash "/"
Slash "/"
Slash "/"
Word "$stream"
Word "types"
Word "are"
Word "synthetic"
LParen "("
Word "generated"
Word "by"
Word "PPIR"
Word "expansion"
RParen ")"
Word "and"
Word "live"
In "in"
Slash "/"
Slash "/"
Word "PPIR"
Error "'"
Word "s"
Word "package_items"
Word "but"
Word "not"
Word "HIR"
Error "'"
Word "s"
Dot "."
Word "User-written"
Word "type"
Word "annotations"
Word "are"
Slash "/"
Slash "/"
Word "resolved"
Word "via"
Word "HIR"
Error "'"
Word "s"
Word "package_items"
Word "during"
Word "package_interface"
Word "construction"
Comma ","
Slash "/"
Slash "/"
Word "so"
Word "$stream"
Word "types"
Word "are"
Word "currently"
Word "not"
Word "user-referenceable"
Dot "."
Slash "/"
Slash "/"
Slash "/"
Slash "/"
Word "This"
Word "fixture"
Word "captures"
Word "that"
Word "limitation"
Dot "."
Word "When"
Word "$stream"
Word "types"
Word "become"
Slash "/"
Slash "/"
Word "user-referenceable"
Comma ","
Word "these"
Word "errors"
Word "should"
Word "disappear"
Dot "."
Class "class"
Word "Config"
LBrace "{"
Word "key"
Word "string"
RBrace "}"
Class "class"
Word "Response"
LBrace "{"
Word "text"
Word "string"
RBrace "}"
Slash "/"
Slash "/"
Word "Bare"
Word "$stream"
Word "from"
Word "root"
Word "namespace"
Function "function"
Word "RootUsesOwnStream"
LParen "("
Word "c"
Colon ":"
Word "Config$stream"
RParen ")"
Arrow "->"
Word "string"
LBrace "{"
Word "c"
Dot "."
Word "key"
RBrace "}"
Slash "/"
Slash "/"
Word "Qualified"
Word "$stream"
Word "from"
Word "llm"
Word "namespace"
Function "function"
Word "RootUsesLlmStream"
LParen "("
Word "r"
Colon ":"
Word "root"
Dot "."
Word "llm"
Dot "."
Word "Response$stream"
RParen ")"
Arrow "->"
Word "string"
LBrace "{"
Word "r"
Dot "."
Word "text"
RBrace "}"
Slash "/"
Slash "/"
Word "Class"
With "with"
Word "$stream"
Word "fields"
Class "class"
Word "RootWithStreamFields"
LBrace "{"
Word "own_stream"
Word "Config$stream"
Word "llm_stream"
Word "root"
Dot "."
Word "llm"
Dot "."
Word "Config$stream"
RBrace "}"
