baml_language/crates/baml_tests/snapshots/namespaces_stream_direct_ref/baml_tests__namespaces_stream_direct_ref__01_lexer__ns_llm_models.snap
---
source: crates/baml_tests/src/generated_tests.rs
---
Slash "/"
Slash "/"
Word "llm"
Word "namespace"
Word "types"
For "for"
Word "cross-namespace"
Word "$stream"
Word "references"
Dot "."
Class "class"
Word "Config"
LBrace "{"
Word "model"
Word "string"
RBrace "}"
Class "class"
Word "Response"
LBrace "{"
Word "text"
Word "string"
RBrace "}"
Slash "/"
Slash "/"
Word "Bare"
Word "$stream"
Word "from"
Word "same"
Word "namespace"
Function "function"
Word "LlmUsesOwnStream"
LParen "("
Word "r"
Colon ":"
Word "Response$stream"
RParen ")"
Arrow "->"
Word "string"
LBrace "{"
Word "r"
Dot "."
Word "text"
RBrace "}"
Slash "/"
Slash "/"
Word "Qualified"
Word "$stream"
Word "from"
Word "root"
Word "namespace"
Function "function"
Word "LlmUsesRootStream"
LParen "("
Word "c"
Colon ":"
Word "root"
Dot "."
Word "Config$stream"
RParen ")"
Arrow "->"
Word "string"
LBrace "{"
Word "c"
Dot "."
Word "key"
RBrace "}"
Slash "/"
Slash "/"
Word "Class"
With "with"
Word "cross-namespace"
Word "$stream"
Word "fields"
Class "class"
Word "LlmWithStreamFields"
LBrace "{"
Word "own_stream"
Word "Response$stream"
Word "root_stream"
Word "root"
Dot "."
Word "Config$stream"
RBrace "}"
